@@ -1,3 +1,12 @@
+2006-11-15  Yves Combe <yves@ycombe.net>
+
+	Play loop of items/group.
+	Mute items/groups.
+
+	* src/gc-sound-channel.gob:
+	* src/gc-sound-item.gob:
+	* src/test_gc_sound.c: (main):
+
 2006-11-14  Yves Combe <yves@ycombe.net>
 
 	Play music with groups of sound items.
